--- a/pkgs/php53u.conf
+++ b/pkgs/php53u.conf
@@ -1,4 +1,4 @@
 enabled = True
 name = php53
 url = http://www.php.net/downloads.php
-regex = (php-5.3.[0-9]*.tar.gz)
+regex = (php-(5.3.[0-9]*).tar.gz)
