package name not needed in regex

--- a/pkgs/php52-pecl-memcache.conf
+++ b/pkgs/php52-pecl-memcache.conf
@@ -2,6 +2,6 @@ enabled = True
 name = php52-pecl-memcache
 url = http://pecl.php.net/package/memcache
 # Check only Stable
-#regex = (.*">(([0-9].[0-9].[0-9]))</a></th>\n.*>stable</td>)
+#regex = .*">([0-9].[0-9].[0-9])</a></th>\n.*>stable</td>
 # Check All
-regex = (.*">(([0-9].[0-9].[0-9]))</a></th>)
+regex = .*">([0-9].[0-9].[0-9])</a></th>
