if its floats, its a duck. BURN HER!

--- a/pkgs/php52-pecl-xdebug.conf
+++ b/pkgs/php52-pecl-xdebug.conf
@@ -4,4 +4,4 @@ url = http://pecl.php.net/package/Xdebug
 # Check only Stable
 regex = .*">([0-9].[0-9].[0-9])</a></th>\n.*>stable</td>
 # Check All
-#regex = (.*">(([0-9].[0-9].[0-9]))</a></th>)
+#regex = .*">([0-9].[0-9].[0-9])</a></th>
